# teaql-rust-utils

./: .cursorrules  .gitignore  AGENTS.md  Cargo.toml  README.md  TeaQL Tool Architecture Design  TeaQL Tool Architecture.MD Design  convert_delegates.py  fix_delegates.py  fix_file.py  fix_file_ret.py  fix_macros.py  strip_mustpurpose_facade.py  teaql-tool-api.MD
teaql-tool/: Cargo.toml  README.md
teaql-tool-context/: Cargo.toml
teaql-tool-context/docs/: address.md  archive.md  barcode.md  cache.md  clipboard.md  cmd.md  codec.md  color.md  config.md  crypto.md  csv.md  daterange.md  decimal.md  desensitize.md  diff.md  email.md  emoji.md  excel.md  file.md  filter.md  geo.md  hash.md  high_res_timer.md  html.md  http.md  i18n.md  id.md  image.md  json.md  jwt.md  kv.md  list.md  map.md  money.md  net.md  phone.md  pinyin.md  qrcode.md  random.md  regex.md  (+8 more)
teaql-tool-context/src/: http.rs  lib.rs  macros.rs  prelude.rs
teaql-tool-context/src/extra_tools/: address.rs  archive.rs  barcode.rs  cache.rs  clipboard.rs  cmd.rs  config.rs  crypto.rs  csv.rs  email.rs  excel.rs  geo.rs  html.rs  image.rs  jwt.rs  kv.rs  mod.rs  phone.rs  pinyin.rs  qrcode.rs  random.rs  template.rs
teaql-tool-context/src/std_tools/: codec.rs  color.rs  daterange.rs  decimal.rs  desensitize.rs  diff.rs  emoji.rs  file.rs  filter.rs  hash.rs  high_res_timer.rs  i18n.rs  id.rs  json.rs  list.rs  map.rs  mod.rs  money.rs  net.rs  regex.rs  system.rs  text.rs  time.rs  tree.rs  unit.rs  url.rs  validate.rs
teaql-tool-core/: Cargo.toml  README.md
teaql-tool-core/src/: audit.rs  env_config.rs  formatter.rs  lib.rs
teaql-tool-core/tests/: error_test.rs
teaql-tool-extra/: Cargo.toml  README.md
teaql-tool-extra/src/: address.rs  archive.rs  barcode.rs  cache.rs  clipboard.rs  cmd.rs  config.rs  cron.rs  crypto.rs  csv.rs  email.rs  excel.rs  geo.rs  html.rs  http.rs  image.rs  jwt.rs  kv.rs  lib.rs  phone.rs  pinyin.rs  proxy.rs  qrcode.rs  random.rs  server.rs  template.rs  watcher.rs
teaql-tool-extra/tests/: cache_test.rs  config_test.rs  crypto_test.rs  csv_test.rs  jwt_test.rs  random_test.rs
teaql-tool-std/: Cargo.toml  README.md  strip_mustpurpose.py
teaql-tool-std/src/: codec.rs  color.rs  daterange.rs  decimal.rs  desensitize.rs  diff.rs  emoji.rs  file.rs  filter.rs  hash.rs  high_res_timer.rs  i18n.rs  id.rs  json.rs  lib.rs  list.rs  map.rs  money.rs  net.rs  regex.rs  system.rs  text.rs  time.rs  tree.rs  unit.rs  url.rs  validate.rs
teaql-tool-std/tests/: codec_test.rs  color_test.rs  daterange_test.rs  decimal_test.rs  filter_test.rs  hash_test.rs  i18n_test.rs  id_test.rs  json_test.rs  money_test.rs  regex_test.rs  system_test.rs  text_test.rs  time_test.rs  validate_test.rs
teaql-tool/examples/: scripting.rs
teaql-tool/src/: lib.rs
teaql-tool/tests/: facade_test.rs
