[package]
name = "teaql-tool-context"
version = "1.0.0"
edition = "2021"
description = "Context and runtime integration for the TeaQL Tool ecosystem."
license = "MIT OR Apache-2.0"
repository = "https://github.com/teaql/teaql-rust-utils"

[features]
default = []
http = ["dep:reqwest"]

[dependencies]
teaql-runtime = { version = "3.1.0", path = "../../teaql-rs/teaql-runtime" }
reqwest = { version = "0.12", optional = true }
