[package]
name = "teaql-tool-extra"
version = "0.1.0"
edition = "2021"

[dependencies]
teaql-tool-core = { path = "../teaql-tool-core" }
rand = "0.10.1"
aes-gcm = "0.10.3"
csv = "1.4.0"
reqwest = { version = "0.13.4", features = ["blocking"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
dotenvy = "0.15.7"
moka = { version = "0.12.15", features = ["sync"] }
serde = { version = "1.0.228", features = ["derive"] }
phonenumber = "0.3.9"
lettre = "0.11.22"
calamine = "0.35.0"
rust_xlsxwriter = "0.95.0"
image = "0.25.10"
tera = "1.20.1"
serde_json = "1.0.150"
