[package]
name = "teaql-tool-extra"
version = "0.1.0"
edition = "2021"

[dependencies]
teaql-tool-core = { path = "../teaql-tool-core" }
rand = "0.10.1"
aes-gcm = "0.10.3"
csv = "1.4.0"
reqwest = { version = "0.13.4", features = ["blocking", "stream"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
dotenvy = "0.15.7"
moka = { version = "0.12.15", features = ["sync"] }
serde = { version = "1.0.228", features = ["derive"] }
phonenumber = "0.3.9"
lettre = "0.11.22"
calamine = "0.35.0"
rust_xlsxwriter = "0.95.0"
image = "0.25.10"
tera = "1.20.1"
serde_json = "1.0.150"
qrcode = "0.14.1"
barcoders = { version = "2.0.0", features = ["image"] }
axum = "0.8.9"
notify = "8.2.0"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["fs", "trace"] }
zip = "8.6.0"
tar = "0.4.46"
flate2 = "1.1.9"
scraper = "0.27.0"
sled = "0.34.7"
cron = "0.16.0"
arboard = "3.6.1"
pinyin = "0.11.0"
wait-timeout = "0.2.1"
chrono = "0.4.44"
walkdir = "2.5.0"
