[package]
name = "teaql-tool-std"
version = "0.1.1"
edition = "2024"
description = "Zero-dependency standard utilities for the TeaQL Tool ecosystem."
license = "MIT OR Apache-2.0"
repository = "https://github.com/teaql/teaql-rust-utils"

[dependencies]
aho-corasick = "1.1.4"
base64 = "0.22.1"
blake3 = "1.8.5"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
convert_case = "0.11.0"
crc32fast = "1.5.0"
deunicode = "1.6.2"
email_address = "0.2.9"
hex = "0.4.3"
html-escape = "0.2.13"
iso_currency = "0.5.3"
json-patch = "4.2.0"
jsonschema = "0.46.5"
libc = "0.2.186"
nanoid = "0.5.0"
percent-encoding = "2.3.2"
regex = "1.12.3"
rust_decimal = "1.42.0"
serde_json = "1.0.150"
sha2 = "0.11.0"
similar = "3.1.1"
teaql-tool-core = { version = "0.1.1", path = "../teaql-tool-core" }
ulid = "1.2.1"
unicode-normalization = "0.1.25"
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.23.2", features = ["v7", "v4"] }

[dev-dependencies]
rust_decimal_macros = "1.40.0"
