[package]
name = "teaql-tool"
version = "1.0.0"
edition = "2021"
description = "The ultimate utility toolkit for TeaQL, inspired by Java Hutool."
license = "MIT OR Apache-2.0"
repository = "https://github.com/teaql/teaql-rust-utils"

[dependencies]
teaql-tool-core = { version = "1.0.0", path = "../teaql-tool-core" }
teaql-tool-std = { version = "1.0.0", path = "../teaql-tool-std", optional = true }
teaql-tool-extra = { version = "1.0.0", path = "../teaql-tool-extra", optional = true }

[features]
default = ["minimal"]

minimal = [
    "std",
]

std = ["dep:teaql-tool-std"]
extra = ["dep:teaql-tool-extra"]

[[example]]
name = "scripting"
required-features = ["extra"]

